[package]
name = "quik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
tokio = { version = "1.34.0", features = ["full"] }
reqwest = "0.11.22"
anyhow = "1.0.75"
chrono = "0.4.31"
lazy_static = "1.4.0"
sys-info = "0.9.1"
tokio-graceful-shutdown = "0.14.0"
miette = "5.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
